made the pokeball button smaller and fixed all the positioning issues. i used a div with rel positioning and then potioned the button using absilute

--- a/public/stylesheets/pokeballstyle.css
+++ b/public/stylesheets/pokeballstyle.css
@@ -3,19 +3,26 @@ body{
     background-color:rgb(116, 111, 111);
     }
 
-
+    .relative {
+        position: relative;
+        width: 50vw;
+        height: 200px;
+        border: 3px solid #73AD21;
+    }
     .poke_box{
         position: absolute;
-        top: 100%;
-        left: 50%;
+        top: 0px;
+        right: 0px;
         -webkit-transform: translate(-50%,-50%);
         transform: translate(-50%,-50%);
     }
 
     .pokeball{
-        position: relative;
-        width: 150px;
-        height: 150px;
+        position: absolute;
+        top: 0px;
+        right: -50px;
+        width: 100px;
+        height: 100px;
         background: #fff;
         border: 5px solid #000;
         border-radius: 50%;
@@ -86,6 +93,3 @@ body{
         to { background: #e74c3c;}
     }
 
-    .has-text-centered {
-      color: #000;
-    }
